More visual testing rig for frontend

--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
 	<style>
 
 		div.player {
-			width: 250px;
-			height: 250px;
+			width: 150px;
+			height: 150px;
 			display: inline-block;
-			margin: 60px;
-			background-color: #99eeff;
+			margin: 20px;
+			background-color: #999999;
+			vertical-align: top;		
 		}
 
 	</style>
@@ -19,10 +20,10 @@
 
 <h1> Testing Game and Players </h1>
 
-<div class="player" id="p1">P1</div>
-<div class="player" id="p2">P2</div>
-<div class="player" id="p3">P3</div>
-<div class="player" id="p4">P4</div>
+<div id="testingarea">
+
+</div>
+
 
 
 <script src="compiled.js"></script>
