--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
 	<style>
 
 		div.player {
-			width: 150px;
-			height: 150px;
+			width: 180px;
+			height: 350px;
 			display: inline-block;
-			margin: 20px;
+			margin: 10px;
 			background-color: #999999;
 			vertical-align: top;		
 		}
@@ -24,7 +24,21 @@
 
 </div>
 
+<script id="player-template" type="text/x-handlebars-template">
+  <div id="p{{playerLetter}}" class="player">
+    <h3>{{playerLetter}}</h3>
+    <p class="infofromserver">---</p>
+    <p class="timer">---</p>
+    <div class="actionbuttons">
+    	<button class="actionbutton" data-action="legalmove">Good move</button>
+    	<button class="actionbutton" data-action="legalmove_lose">Losing move</button>
+    	<button class="actionbutton" data-action="illegalmove">Illegal move</button>
+    	<button class="actionbutton" data-action="disconnect">Disconnect</button>
 
+    </div>
+    
+  </div>
+</script>
 
 <script src="compiled.js"></script>
 </body>
