Poker game building

--- a/v3/pokergame/index.html
+++ b/v3/pokergame/index.html
@@ -33,6 +33,7 @@
     	<button class="actionbutton" data-action="bet">Bet</button>
     	<button class="actionbutton" data-action="check">Check</button>
     	<button class="actionbutton" data-action="fold">Fold</button>
+    	<button class="actionbutton" data-action="call">Call</button>
     	<button class="actionbutton" data-action="disconnect">Disconnect</button>
 
     </div>
