Beforemove filter now raising SkipMove and test UI for poker improved

--- a/v3/pokergame/index.html
+++ b/v3/pokergame/index.html
@@ -37,7 +37,12 @@
     	<button class="actionbutton" data-action="disconnect">Disconnect</button>
 
     </div>
-    
+
+    <hr/>
+    <h4>Hole cards</h4>
+    <div class="holecards">--cards here--</div>
+     <h4>Board cards</h4>
+    <div class="boardcards">--board here--</div>   
   </div>
 </script>
 
